# GenHealth

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: sample_medical_data.py
examples/: test_api.py  test_basic.py  test_realistic_data.py
notebooks/: GenHealth_Demo.ipynb  Technical_Deep_Dive.ipynb
notebooks/.ipynb_checkpoints/: GenHealth_Demo-checkpoint.ipynb
scripts/: setup.sh
src/genhealth/: __init__.py
src/genhealth/api/: __init__.py  endpoints.py  main.py  middleware.py  schemas.py
src/genhealth/data/: __init__.py  augmentation.py  data_loader.py  image_processor.py  medical_report_processor.py
src/genhealth/evaluation/: __init__.py  evaluator.py  metrics.py  visualization.py
src/genhealth/models/: __init__.py  fusion_model.py  multimodal_model.py  text_encoder.py  vision_encoder.py
